2012-11-15  Tobias Burnus  <burnus@net-b.de>
	    Joseph Myers  <joseph@codesourcery.com>

	* math/fmaq.c (fmaq): Merge from GLIBC. Fix fma
	underflows with small x * y; Fix overflow results
	outside round-to-nearest mode; make use of Dekker
	and Knuth algorithms use round-to-nearest.

2012-11-01  Tobias Burnus  <burnus@net-b.de>

	* math/fmaq.c (fmaq): Fix build.

2012-11-01  Tobias Burnus  <burnus@net-b.de>
	    Joseph Myers  <joseph@codesourcery.com>

	* math/fmaq.c (fmaq): Merge from GLIBC. Handle cases
	with small x * y using scaling, not as x * y + z.
	* math/lgammaq.c (lgammaq): Fix signgam handling.

2012-11-01  Tobias Burnus  <burnus@net-b.de>

	* Makefile.am (libquadmath_la_SOURCES): Add new math/* files.
	* Makefile.in: Regenerated.
	* math/acoshq.c: Update comment.
	* math/acosq.c: Ditto.
	* math/asinhq.c: Ditto.
	* math/asinq.c: Ditto.
	* math/atan2q.c: Ditto.
	* math/atanhq.c: Ditto.
	* math/ceilq.c: Ditto.
	* math/copysignq.c: Ditto.
	* math/cosq.c: Ditto.
	* math/coshq.c: Ditto.
	* math/erfq.c: Ditto.
	* math/fabsq.c: Ditto.
	* math/finiteq.c: Ditto.
	* math/floorq.c: Ditto.
	* math/fmodq.c: Ditto.
	* math/frexpq.c: Ditto.
	* math/isnanq.c: Ditto.
	* math/j0q.c: Ditto.
	* math/j1q.c: Ditto.
	* math/ldexpq.c: Ditto.
	* math/llroundq.c: Ditto.
	* math/log10q.c: Ditto.
	* math/log1pq.c: Ditto.
	* math/log2q.c: Ditto.
	* math/logq.c: Ditto.
	* math/lroundq.c: Ditto.
	* math/modfq.c: Ditto.
	* math/nextafterq.c: Ditto.
	* math/powq.c: Ditto.
	* math/rem_pio2q.c: Ditto.
	* math/remainderq.c: Ditto.
	* math/rintq.c: Ditto.
	* math/roundq.c: Ditto.
	* math/scalblnq.c: Ditto.
	* math/scalbnq.c: Ditto.
	* math/sincosq_kernel.c: Ditto.
	* math/sinq.c: Ditto.
	* math/tanq.c: Ditto.
	* math/expq.c: Ditto.
	(__expq_table, expq): Renamed local array from __expl_table.
	* math/cosq_kernel.c (__quadmath_kernel_cosq): Fix sign handling.
	* math/cacoshq.c: Changes from GLIBC; fix returned sign.
	* math/casinhq.c: Changes from GLIBC to fix special-case.